php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25166 Crash when session.serialize_handler string is set to wddx
Submitted: 2003-08-20 02:49 UTC Modified: 2003-08-29 02:44 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: cristea at pntcd dot ro Assigned:
Status: Closed Package: Session related
PHP Version: 4.3.3 OS: win32 only
Private report: No CVE-ID: None
 [2003-08-20 02:49 UTC] cristea at pntcd dot ro
Description:
------------
Platform:
Windows XP Pro
Apache 2.0.45
PHP 4.3.2

Apache HTTP server is close if session.serialize_handler string is set to wddx: ini_set('session.serialize_handler', 'wddx');


Reproduce code:
---------------
ini_set('session.serialize_handler', 'wddx');
session_start();

Windows XP message: Apache HTTP Server has encountered a problem and needs to close.  We are sorry for the inconvenience.


Actual result:
--------------
Error signature:
szAppName : Apache.exe     szAppVer : 2.0.45.0     szModName : php4ts.dll     
szModVer : 4.3.2.2     offset : 0007d60f    



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-08-25 10:31 UTC] cristea at pntcd dot ro
I had updated to:
PHP 4.3.3
Apache 2.0.47 (Win)

The problem still remain. I saved the temp files that WinXP has created during crash. It can be found at:
http://64.207.212.14/Apache.exe.mdmp
and
http://64.207.212.14/appcompat.txt
 [2003-08-25 21:52 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.

The crash was caused by the fact that 'wddx' serializer handler was not enabled in the build. Any unknown serializer would cause the crash. I have fixed both the cause (missing wddx handler) and the symptom (crash) in CVS.

 [2003-08-28 02:16 UTC] cristea at pntcd dot ro
I had updated with PHP 4.3.4-dev from http://snaps.php.net (file php4-win32-STABLE-200308280430.zip), but the bus still remain.
 [2003-08-28 03:20 UTC] sniper@php.net
You didn't install it correctly. Remove all old php related dlls from your system (everywhere!) and reinstall the _latest_ STABLE snapshot. 
 [2003-08-29 02:44 UTC] cristea at pntcd dot ro
Done! I had some php related dlls in c:\windows\system32 folder. Now it's OK.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC