- Fixed bug #25166 (WDDX serializer handler missing in win32). (Jani)