main/config.w32.h
@@ -2,7 +2,7 @@
 	Build Configuration for Win32.
 	This has only been tested with MS VisualC++ 6 (and later).
 
-	$Id: config.w32.h,v 1.76 2003/08/14 16:49:56 wez Exp $
+	$Id: config.w32.h,v 1.77 2003/08/26 02:50:39 sniper Exp $
 */
 
 /* Default PHP / PEAR directories */
@@ -59,7 +59,7 @@
 #define HAVE_PCRE 1
 
 /* Enable / Disable SESSION extension (default: enabled) */
-#define HAVE_SESSION 1
+#define HAVE_PHP_SESSION 1
 
 /* Enable / Disable TOKENIZER extension (default: enabled) */
 #define HAVE_TOKENIZER 1
